# news_Insights_dashboard

./: .env_templet.txt  .gitignore  Makefile  README.md  etl.py  etl_notebook.ipynb  main.py  news_with_sentiment.csv  pyproject.toml  requirements.txt  test.ipynb  test_etl.ipynb
components/: analyse_sentiment.py  extract_content.py  load_content.py  logging_config.py  transform_content.py
dags/: news_pipline_dag.py
scripts/: deployment.sh
